--- a/css/footer.css
+++ b/css/footer.css
@@ -8,8 +8,7 @@
 	text-align: center;
 }
 
-.sl_seoFooter {
-	font-family: Arial, Sans-Serif;
+.sl_footerLinkContain {font-family: Arial, Sans-Serif;
 	font-size: 10px;
 	color: #333;
 	margin: 6px auto;
