--- a/css/changelocation.css
+++ b/css/changelocation.css
@@ -7,7 +7,6 @@
 	max-width: 1000px;
 }
 #myStore {
-	margin-top: 20px;
 	padding-bottom: 20px;
 	border-bottom: 1px solid #ccc;
 }
@@ -19,7 +18,6 @@
 	height: 29px;
 }
 .storeInfo {
-	margin-left: 30px;
 	margin-top: 20px;
 	float:left;
 }
@@ -35,6 +33,7 @@
 }
 .storeName {
 	font-size: 15px;
+	line-height: 20px;
 	font-weight: bold;
 }
 .storePhone {
@@ -43,14 +42,13 @@
 .storeHours {
 	font-size: 13px;
 	font-weight: bold;
-	margin: 10px 0;
+	margin: 5px 0;
 }
 #searchStores {
-	margin: 10px 0;
+	margin: 15px 0;
 }
-.storesNear {
+.storesNearSearchTitle {
 	float: left;
-	margin-left: 30px;
 	margin-right:10px;
 	margin-top: 10px;
 }
@@ -73,22 +71,34 @@
 }
 .changeLocationBtn {
 	margin:10px 0;
+	width:200px;
 }
 
 @media only screen and (max-width: 1024px) {
     /* iPad/tablet Portrait AND landscape */
 	.locationTitle {
-		margin-left: 10px;
+		margin-left: 15px;
+	}
+	.storeInfo {
+		margin-left:15px;
+		margin-right:15px;
+	}
+	#searchStores {
+		margin: 15px 0 0 15px;
 	}
 }
 @media only screen and (min-width: 960px) and (max-width: 1040px) {
     /* iPad/tablet Portrait */
 
 }
-@media only screen and  (min-width: 320px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
     /* Mobile */
-
- 
+	.locationTitle {
+		margin-bottom:10px;
+	}
+	.storesNearSearchTitle {
+		margin-bottom:5px;
+	}
 }
 
 
