--- a/css/shoppinglist.css
+++ b/css/shoppinglist.css
@@ -1,16 +1,15 @@
 #listViewHeader{
 	width: 100%;
 	height: 30px;
-
 }
 .savedDeals{
 	font-weight:bold;
-	font-size:16px;
+	font-size:20px;
+	float:left;
 }
 .listOptions{
+	margin: 6px 10px 0 10px;
 	float:left;
-	margin: 15px 0;
-	display: inline;
 }
 .removeallLink{
 	float: left;
@@ -19,14 +18,10 @@
 .printList{
 	float: left;
 	margin-left: 10px;
-	text-decoration: underline;
-	color: #000;
 }
 .emailList{
 	float: left;
 	margin-left: 10px;
-	text-decoration: underline;
-	color: #000;
 }
 #emailForm{
 	width: 100%;
@@ -46,12 +41,12 @@
 
 #sl_search_form_email{
 	margin-top: 10px;
-	margin-left:20px;
-	position:relative;
+	margin-left: 15px;
+	position: relative;
 }
 
 .sl_search_text_email{
-	width: 300px;
+	width: 280px;
 	height: 30px;
 	padding-left: 5px;
 	border: 1px solid #C6C5C5;
@@ -59,7 +54,6 @@
 	color: #000;
 	font-size: 14px;
 }
-
 .emailSend {
 	width: 30px;
 	position: absolute;
@@ -99,6 +93,9 @@
 
 @media only screen and (max-width: 1024px) {
     /* iPad/tablet Portrait */
+	.savedDeals {
+		margin-left: 15px;
+	}
 	.listOptions {
 		margin-left:15px;
 	} 
@@ -108,8 +105,11 @@
 	.savedDeals {
 		float: none;
 		margin-left: 15px;
-
+		margin-bottom:5px;
 	}
+	.listOptions {
+		margin-left:15px;
+	} 
 	.emailInstructions {
 		display: inline-block;
 		margin: 10px 0 0 0;
@@ -118,8 +118,6 @@
 		margin-bottom: 10px;
 	}
 	#sl_search_form_email {
-		margin-left:0;
+		margin-left:10px;
 	}
-	.sl_search_text_email
-
 }
