--- a/css/site_wide.css
+++ b/css/site_wide.css
@@ -13,6 +13,9 @@
 .pointer {
     cursor: pointer;
 }
+.bold {
+	font-weight: bold;
+}
 body {
 	font-family:Arial, Helvetica, sans-serif;
 	font-size: 12px;
@@ -36,10 +39,6 @@ a:hover, .stdLink:hover {text-decoration:none;
 .shoplocal_container {
 	max-width:1000px;
 	margin:0 auto;
-}
-.fullscreen .shoplocal_container {
-    max-width:initial;
-    width: 90%;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
