--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,7 @@
-.client_header {border-bottom:1px solid #ccc;
-margin:20px 0 20px 0;
+.client_header {
+	border-bottom:1px solid #ccc;
 }
-.clientLogoContain {padding:0 0 10px 20px;
+.clientLogo {
+	display: inline-block;
+	margin: 20px;
 }
