--- a/css/heroBanner.css
+++ b/css/heroBanner.css
@@ -7,9 +7,8 @@
 
 /*hero banner*/
 .heroBannerContain {
-	height:120px;
 	position:relative;
-	padding-bottom:36px;
+	padding-bottom:24px;
 }
 .heroPrev {
 	position:absolute;
@@ -61,9 +60,12 @@
 .slideIndicator {
 	text-align: center;
 	position: absolute;
-	top: 130px;
-	left: 405px;
-	width: 120px;
+	bottom: 0px;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	transform: translateX(-50%);
 	z-index: 2;
 }
 .slideIndicator a {
@@ -75,7 +77,7 @@
 	border-radius: 50px;
 }
 .slideIndicator a.active {
-	background:black;
+	background:#3258b3;
 }
 .specialEventNoClick {
 	cursor: default;
