--- a/css/site_wide.css
+++ b/css/site_wide.css
@@ -24,6 +24,11 @@ body {
 	margin: 0;
 	padding: 0;
 }
+*, *:after, *:before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 a {
 	color:#3258b3;
 	text-decoration:underline;
@@ -34,7 +39,8 @@ a {
 	text-decoration:underline;
 	cursor:pointer;
 }
-a:hover, .stdLink:hover {text-decoration:none;
+a:hover, .stdLink:hover {
+    text-decoration:none;
 }
 .shoplocal_container {
 	max-width:1000px;
