--- a/css/landing.css
+++ b/css/landing.css
@@ -83,28 +83,37 @@
 
 
 /*Category dropdown*/
-.categoryDropdown {
-	float:left;
-	text-align:left;
-	position:relative;
-	top:7px;
-}
-.categoryDropdownOptions {
-	margin-right:15px;
-}
 
-.posCategoryDropdownTriangle {
-	position:absolute;
-	right:0;
-	top:3px;
+.categoryDropdown {
+	margin:0 0 20px 0;
+	float:left;
 }
-.viewingCategoryLabel {font-weight:bold;
+.categoryViewingLabel {
+	float: left;
+	font-weight:bold;
+	font-size: 14px;
+	text-align: right;
+	padding: 0 5px 0 0;
+}
+.containCategoryOptions {
+	float: left;
+	position: relative;
+	white-space: nowrap;
+}
+.categoryOption {
+	padding: 0 16px 0 0;
+	font-size: 14px;
+	width: auto;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	position: relative;
+	cursor:pointer;
 }
 
 /*help box*/
 .helpContainer {
 	float:right;
-	text-align::right;
 	margin-bottom:10px;
 	cursor:pointer;
 }
@@ -312,7 +321,7 @@
     }
     .additionalDealTablet {display:none;
     }
-	.landingContain {
+	#LandingContain {
 		width:768px;
 		margin:0 auto;
 	}
@@ -385,7 +394,7 @@
         background-color: transparent;
         width: 50%;
     }
-	.landingContain {
+	#LandingContain {
 		width:auto;
 		margin:0 auto;
 	}
