--- a/css/shoppinglist.css
+++ b/css/shoppinglist.css
@@ -1,8 +1,8 @@
-#listViewHeader{
+.listViewHeader{
 	width: 100%;
 	height: 30px;
 }
-.savedDeals{
+.savedDealsLabel{
 	font-weight:bold;
 	font-size:20px;
 	float:left;
@@ -23,7 +23,9 @@
 	float: left;
 	margin-left: 10px;
 }
-#emailForm{
+
+/*email dropdown*/
+.emailForm{
 	width: 100%;
 	border-top: 1px solid #C6C5C5;
 	border-bottom: 1px solid #C6C5C5;
@@ -37,17 +39,13 @@
 
 .emailSearchBar{
 	display: inline-block;
-}
-
-#sl_search_form_email{
 	margin-top: 10px;
 	margin-left: 15px;
 	position: relative;
 }
-
 .sl_search_text_email{
 	width: 280px;
-	height: 30px;
+	height: 32px;
 	padding-left: 5px;
 	border: 1px solid #C6C5C5;
 	background: white;
