--- a/css/bbpage.css
+++ b/css/bbpage.css
@@ -43,23 +43,35 @@
 
 /*BBP sub navigation*/
 .bbpNavContain {
+	display: -ms-flex;
   	display: -webkit-flex;
   	display: flex;
 	margin-bottom:10px;
 }
 .validDatesOfCircular {
-	flex: 1.5;
+	-webkit-flex: 1; /* Safari 6.1+ */
+    -ms-flex: 1; /* IE 10 */ 
+	flex: 1;
 }
-.containPageSortOptions {
+.containPageDropdown {
+	-webkit-flex: 1; /* Safari 6.1+ */
+    -ms-flex: 1; /* IE 10 */ 
 	flex: 1;
 	position:relative;
 }
 .pageContolContain {
+	-webkit-flex: 1; /* Safari 6.1+ */
+    -ms-flex: 1; /* IE 10 */ 
 	flex: 1;
 	text-align:right;
 }
 
 /*page dropdown*/
+.containPageSortOptions {
+	text-align:center;
+	position:relative;
+
+}
 .activePageSortOption {
 	font-size: 12px;
 	padding-right: 16px;
@@ -95,8 +107,12 @@
 	height:170px;
 	overflow-y:scroll;
 	position:absolute;
+	left:50%;
 	top:20px;
-	left:-10px;
+	-ms-transform:translateX(-50%);
+	-webkit-transform:translateX(-50%);
+	transform:translateX(-50%);
+
 }
 .pageSortOption {
 	width:110px;
