--- a/css/helpOverlay.css
+++ b/css/helpOverlay.css
@@ -32,7 +32,7 @@
     width: 570px;
     z-index: 2002;
     top: -70px;
-    left: 15px;
+    left: 3%;
 }
 .welcomeMessage1 {
     font-size: 60px;
@@ -49,8 +49,7 @@
     position: absolute;
     z-index: 2002;
     top: 160px;
-    left: 20px;
-    width:0;
+    left: 5%;
 }
 .unit2_graphics {
 	position: relative;
@@ -101,9 +100,9 @@
 .ob_Unit3 {
     position: absolute;
     z-index: 2002;
-    left: 640px;
-	top: 5px;
     width: 0;
+	left:65%;
+	top:10px;
 }
 .unit3_graphics {
 	position: relative;
@@ -130,7 +129,7 @@
     position: absolute;
     z-index: 2002;
     top: 180px;
-    left: 664px;
+    left: 65%;
 }
 .unit4_graphics {
 	position: relative;
@@ -159,8 +158,8 @@
 .ob_Unit5 {
     position: absolute;
 	z-index: 960;
-	top: 340px;
-	left: 200px;
+	top: 300px;
+	left: 25%;
 	border: 5px solid white;
 	border-radius: 500px;
 	width: 400px;
@@ -178,7 +177,7 @@
     position: absolute;
     z-index: 2002;
     top: -70px;
-    left: 860px;
+	left:80%;
 }
 .posCloseTextonOnBoarding {
     position: absolute;
@@ -240,6 +239,7 @@
 	-webkit-border-radius: 1px;
 	border-radius: 1px;
 }
+
 @media only screen and (max-width: 1024px) {
     .instructUser {
         font-size:16px;
@@ -249,9 +249,6 @@
     }
 	
 	/*unit 1*/
-    .ob_Unit1 {
-		left:50px;
-    }
     .welcome1 {
         font-size: 45px;
         line-height: 40px;
@@ -262,194 +259,14 @@
         font-size: 20px;
     }
 	
-	/*unit 2*/
-    .ob_Unit2 {
-        position: absolute;
-        z-index: 2002;
-        top: 145px;
-		left: 30px;
-        width:0;
-    }
-    .unit2_graphics {
-		position: relative;
-        left: 10px;
-        bottom: 130px;
-    }
-    .unit2_arrow {
-		width: 0; 
-	    height: 0; 
-	    border-left: 10px solid transparent;
-	    border-right: 10px solid transparent;
-	    border-bottom: 24px solid #fff;
-	    position:relative;
-        left: 16px;
-        top: 23px;
-    }
-    .unit2_arrow2 {
-		width: 0; 
-	    height: 0; 
-	    border-left: 10px solid transparent;
-	    border-right: 10px solid transparent;
-	    border-bottom: 24px solid #fff;
-	    position:relative;
-	    left:140px
-    }
-    .unit2_line {
-		border-bottom: 4px solid #FFF;
-        -ms-transform: rotate(90deg);
-        -webkit-transform: rotate(90deg);
-        transform: rotate(90deg);
-        position: relative;
-        width: 40px;
-        left: 6px;
-        top: 9px;
-    }
-    .unit2_line2 {
-		border-bottom: 4px solid #FFF;
-        -ms-transform: rotate(90deg);
-        -webkit-transform: rotate(90deg);
-        transform: rotate(90deg);
-        position: relative;
-        width: 40px;
-        left: 130px;
-        top: 5px;
-    }
-	
-	/*unit 3*/
-    .ob_Unit3 {
-        position: absolute;
-        z-index: 2002;
-        left: 620px;
-        top: 5px;
-        width: 0;
-    }
-    .unit3_graphics {
-		position: relative;
-        left: 210px;
-        bottom: 40px;
-    }
-    .unit3_arrow {
-		width: 0; 
-	    height: 0; 
-	    border-top: 14px solid transparent;
-	    border-bottom: 14px solid transparent;
-	    border-left: 28px solid #fff;
-    }
-    .unit3_line {
-		border-top: 6px solid #FFF;
-        position: relative;
-        right: 60px;
-        bottom: 17px;
-        width: 60px;
-    }
-	
-	/*unit 4*/
-    .ob_Unit4 {
-        position: absolute;
-        z-index: 2002;
-        top: 180px;
-        left: 590px;
-    }
-    .unit4_graphics {
-		position: relative;
-        left: 90px;
-        top:-140px;
-    }
-    .unit4_arrow {
-		width: 0; 
-	    height: 0; 
-	    border-left: 14px solid transparent;
-	    border-right: 14px solid transparent;
-	    border-bottom: 28px solid #fff;
-    }
-    .unit4_line {
-		border-bottom: 6px solid #FFF;
-        -ms-transform: rotate(90deg); /* IE 9 */
-        -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
-        transform: rotate(90deg);
-        position: relative;
-        width: 80px;
-        right: 26px;
-        bottom: -20px;
-    }
-	
-	/*unit 5*/
-    .ob_Unit5 {
-		top: 300px;
-	}
-	
-	/*unit 6*/
-     .ob_Unit6 {
-        left:725px;
-    }
 }
 @media only screen and (min-width: 768px) and (max-width: 959px) {
 	/*unit 3*/
 	.ob_Unit3 {
-        position: absolute;
-        z-index: 2002;
-		left: 500px;
-		top: 7px;
-        width: 0;
-    }
-    .unit3_graphics {
-		position: relative;
-        left: 210px;
-        bottom: 40px;
-    }
-    .unit3_arrow {
-		width: 0; 
-	    height: 0; 
-	    border-top: 14px solid transparent;
-	    border-bottom: 14px solid transparent;
-	    border-left: 28px solid #fff;
-    }
-    .unit3_line {
-		border-top: 6px solid #FFF;
-        position: relative;
-        right: 60px;
-        bottom: 17px;
-        width: 60px;
-    }
-	
-	/*unit 4*/
-    .ob_Unit4 {
-        position: absolute;
-        z-index: 2002;
-        top: 170px;
-        left: 520px;
-    }
-    .unit4_graphics {
-		position: relative;
-        left: 90px;
-        top:-140px;
-    }
-    .unit4_arrow {
-		width: 0; 
-	    height: 0; 
-	    border-left: 14px solid transparent;
-	    border-right: 14px solid transparent;
-	    border-bottom: 28px solid #fff;
-    }
-    .unit4_line {
-		border-bottom: 6px solid #FFF;
-        -ms-transform: rotate(90deg); /* IE 9 */
-        -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
-        transform: rotate(90deg);
-        position: relative;
-        width: 80px;
-        right: 26px;
-        bottom: -20px;
-    }
-	
-	/*unit 5*/
-    .ob_Unit5 {
-		top: 300px;
-		left: 150px;
+		left:60%;
+		-ms-transform:translateX(-60%);
+		-webkit-transform:translateX(-60%);
+		transform:translateX(-650%);
 	}
 	
-	/*unit 6*/
-    .ob_Unit6 {
-        left:635px;
-    }
 }
