--- a/css/shoppinglist.css
+++ b/css/shoppinglist.css
@@ -91,7 +91,7 @@
 
 @media only screen and (max-width: 1024px) {
     /* iPad/tablet Portrait */
-	.savedDeals {
+	.savedDealsLabel {
 		margin-left: 15px;
 	}
 	.listOptions {
@@ -100,7 +100,7 @@
 }
 @media only screen and (max-width: 767px) {
     /* Mobile */
-	.savedDeals {
+	.savedDealsLabel{
 		float: none;
 		margin-left: 15px;
 		margin-bottom:5px;
