--- a/css/reset.css
+++ b/css/reset.css
@@ -1,27 +1,19 @@
-@charset "UTF-8";
-/* CSS Document */
-
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
+small, strike, strong, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
+article, aside, canvas, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
+	outline: 0;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -45,7 +37,150 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
+
+/* remember to define visible focus styles! 
+:focus {
+	outline: ?????;
+} */
+
+/* remember to highlight inserts somehow! */
+ins {
+	text-decoration: none;
+}
+del {
+	text-decoration: line-through;
+}
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+h1, h2, h3, h4 {font-weight:bold;}
+h5, h6 {font-weight:normal;}
+hr {
+    display:block;
+    height:1px;
+    border:0;   
+    border-top:1px solid #cccccc;
+    margin:0;
+    padding:0;
+}
+
+input, select {
+    vertical-align:middle;
+}
+/*END reset*/
+
+.cursorPointer{cursor:pointer}
+
+.fl{float:left}.fr{float:right}.cb{clear:both}.posRelative{position:relative;}.posAbsolute{position:absolute;}
+
+/*todo remove this class. its too generic. replaced by hcenter*/.center{margin:0 auto;}
+.hcenter{margin:0 auto;}
+
+.tl{text-align:left}.tr{text-align:right}.tc{text-align:center}
+.bold{font-weight:bold}.italic{font-style:italic}.normal{font-weight:normal}
+
+.on, .displayon{display: block; visibility: visible;}
+.off, .displayoff{display: none; visibility: hidden;}
+.dispNone{display:none;}.dispBlock{display:block;}
+.visHidden{visibility:hidden}
+.visVisible{visibility:visible}
+
+.dispInlineBlock{display:inline-block;}
+
+.borderNone{border:none}
+
+.suppressOutline:focus {
+    outline-width: 0;
+    }
+    
+.textDecorationNone{text-decoration:none}
+
+.f10{font-size:10px}
+.f11{font-size:11px}
+.f12{font-size:12px}
+.f13{font-size:13px}
+.f14{font-size:14px}
+.f15{font-size:15px}
+.f16{font-size:16px}
+.f17{font-size:17px}
+.f18{font-size:18px}
+
+.p5{padding:5px}
+.p10{padding:10px}
+.p20{padding:20px}
+
+.pt1{padding-top:1px}
+.pt2{padding-top:2px}
+.pt3{padding-top:3px}
+.pt4{padding-top:4px}
+.pt5{padding-top:5px}
+.pt6{padding-top:6px}
+.pt7{padding-top:7px}
+.pt8{padding-top:8px}
+.pt9{padding-top:9px}
+.pt10{padding-top:10px}
+
+
+.pt13{padding-top:13px}
+.pt14{padding-top:14px}
+.pt15{padding-top:15px}
+.pt20{padding-top:20px}
+.pt25{padding-top:25px}
+.pt30{padding-top:30px}
+.pt50{padding-top:50px}
+
+.ptb3{padding:3px 0 3px 0}
+.ptb5{padding:5px 0 5px 0}
+.ptb10{padding:10px 0 10px 0}
+.ptb20{padding:20px 0 20px 0}
+
+.pb3{padding-bottom:3px}
+.pb5{padding-bottom:5px}
+.pb10{padding-bottom:10px}
+.pb12{padding-bottom:12px}
+.pb20{padding-bottom:20px}
+.pb25{padding-bottom:25px}
+.pb30{padding-bottom:30px}
+
+.pl2{padding-left:2px}
+.pl5{padding-left:5px}
+.pl15{padding-left:15px}
+.pl30{padding-left:30px}
+
+.mt1{margin-top:1px}
+.mt2{margin-top:2px}
+.mt3{margin-top:3px}
+.mt4{margin-top:4px}
+.mt5{margin-top:5px}
+.mt10{margin-top:10px}
+.mt15{margin-top:15px}
+.mt20{margin-top:20px}
+.mt55{margin-top:55px}
+
+.mr5{margin-right:5px}
+.mr10{margin-right:10px}
+.mr50{margin-right:50px}
+
+.mb1{margin-bottom:1px}
+.mb2{margin-bottom:2px}
+.mb3{margin-bottom:3px}
+.mb4{margin-bottom:4px}
+.mb5{margin-bottom:5px}
+.mb8{margin-bottom:8px}
+.mb10{margin-bottom:10px}
+.mb15{margin-bottom:15px}
+.mb20{margin-bottom:20px}
+.mb25{margin-bottom:25px}
+
+.ml1{margin-left:1px}
+.ml10{margin-left:10px}
+.ml15{margin-left:15px}
+.ml50{margin-left:50px}
+
+.fontWhite{color:#ffffff;}
+
+.datalist, .data{display:none;}
+/*END global (single rule) classes*/
