--- a/css/entry.css
+++ b/css/entry.css
@@ -16,22 +16,8 @@
 	font-size: 14px;
 	margin: 0 auto;
 }
-.neup_search_form {
-	border: 1px solid #ccc;
-	padding: 0;
-	position: relative;
-	width: 280px;
-	height: 32px;
+.entryContain .containSearch {
 	margin:10px auto;
-}
-.neup_search_form input {
-	border: none;
-	width: 85%;
-	padding: 6px;
-	margin: 0;
-	height: 30px;
-	color: #000000;
-	font-size: 14px;
 }
 
 /*no content*/
