--- a/css/bbpage.css
+++ b/css/bbpage.css
@@ -53,7 +53,7 @@
 	flex: 1;
 }
 
-.pageContolContain {
+.pageControlContain {
 	-webkit-flex: 1; /* Safari 6.1+ */
     -ms-flex: 1; /* IE 10 */ 
 	flex: 1;
