--- a/css/landing.css
+++ b/css/landing.css
@@ -11,10 +11,11 @@
 
 /*grid contain*/
 #LandingContain #GridContain {
+
     background-color:#FFF;
     margin-bottom:60px;
 }
-.landingContain {margin-top:20px;
+#LandingContain {margin-top:20px;
 }
 
 
@@ -173,6 +174,7 @@
 /*image styles*/
 #LandingContain .imageContain img {
     max-width:100%;
+    display: block;
 }
 
 #LandingContain .heroBlock .imageContain {
@@ -181,6 +183,7 @@
     position:absolute;
     left:126px;
     bottom:30px;
+    display: block;
 }
 
 #LandingContain .largeBlock .imageContain {
@@ -190,22 +193,26 @@
     left: 0;
     top:20px;
     margin:0 auto;
+    display: block;
 }
 
 #LandingContain .specialBlock.largeBlock .imageContain {
     bottom:46px;
+    display: block;
 }
 
 #LandingContain .wideBlock .imageContain {
     width:180px;
     height:180px;
     margin:10px auto 0 auto;
+    display: block;
 }
 
 #LandingContain .smallBlock .imageContain {
     width:180px;
     height:180px;
     margin: 30px auto 0;
+    display: block;
 }
 
 #LandingContain .largeBlock.largeListingBlock .imageContain {
@@ -215,11 +222,13 @@
     position: relative;
     top: 0;
     left: 0;
+    display: block;
 }
 #LandingContain .smallBlock.smallListingBlock .imageContain {
     margin:0 auto;
     width: 140px;
     height: 140px;
+    display: block;
 }
 
 #LandingContain .tallBlock .imageContain {
@@ -228,6 +237,7 @@
     margin:0 auto;
     top:150px;
     width:200px;
+    display: block;
 }
 
 #LandingContain .tallBlock.tallListingBlock .imageContain {
@@ -235,6 +245,7 @@
     left: 0;
     margin:0 auto;
     top:50px;
+    display: block;
 }
 
 #LandingContain .wideBlock.wideListingBlock .imageContain {
@@ -242,6 +253,7 @@
     position:absolute;
     top: 7px;
     left: 275px;
+    display: block;
 }
 
 #LandingContain .specialBlock {
