--- a/css/changelocation.css
+++ b/css/changelocation.css
@@ -52,7 +52,7 @@
 	margin-right:10px;
 	margin-top: 10px;
 }
-#searchStores .containSearch {
+#SearchStores .containSearch {
 	width: 280px;
 	float:left;
 }
