adding dropdown to bbp mobile

--- a/css/bbpage.css
+++ b/css/bbpage.css
@@ -106,7 +106,7 @@
 
     .bbpContainer {
         width: 300px;
-        margin: 0 auto;
+        margin: 22px auto;
         overflow: hidden;
     }
 
